funcmap_tests/tests/ui/structure/macro_type.stderr
error: `derive` cannot be used on items with type macros
  --> tests/ui/structure/macro_type.rs:10:16
   |
10 | struct Test<T>(test_type!());
   |                ^^^^^^^^^^^^
